improve/fix compiling on SuSE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,13 +105,60 @@ IF (PIDX_OPTION_NVISUSIO)
   FIND_PACKAGE(NVISUSIO REQUIRED)
   IF (NVISUSIO_FOUND)
     SET(PIDX_HAVE_NVISUSIO 1)
+
+    # ///////////////////////////////////////////////
+    # Modern C++ Support
+    # ///////////////////////////////////////////////
+
+    include(CheckCXXCompilerFlag)
+
+    IF (NOT WIN32)
+      CHECK_CXX_COMPILER_FLAG("-std=c++14" COMPILER_SUPPORTS_CXX14)
+      CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
+      CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
+      CHECK_CXX_COMPILER_FLAG("-stdlib=libc++" COMPILER_SUPPORTS_LIBCXX)
+      IF (COMPILER_SUPPORTS_CXX14)
+        MESSAGE("Your compiler supports C++14!")
+      ENDIF()
+      IF (COMPILER_SUPPORTS_CXX11)
+        MESSAGE("C++11 is supported and enabled")
+        IF (APPLE)
+          if (CMAKE_GENERATOR STREQUAL Xcode)
+            set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
+            set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++11")
+          else()
+            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+            set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++")
+          endif()
+        ELSE()
+          set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+        ENDIF()
+      ELSEIF(COMPILER_SUPPORTS_CXX0X)
+        MESSAGE("C++0x is supported and enabled")
+        IF (APPLE)
+          if (CMAKE_GENERATOR STREQUAL Xcode)
+            set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
+            set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++0x")
+          else()
+            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+            set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++")
+          endif()
+        ELSE()
+          set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+        ENDIF()
+      ELSE()
+        MESSAGE("Modern C++ is not supported on your compiler. Using -std=c++98")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++98")
+      ENDIF()
+    ENDIF()
+
   ENDIF()
 ENDIF()
 
 MESSAGE("PIDX_OPTION_PNETCDF ${PIDX_OPTION_PNETCDF}")
 OPTION(PIDX_OPTION_PNETCDF "Test Pnetcdf (netcdf-1)" FALSE)
 IF (PIDX_OPTION_PNETCDF)
-  FIND_PACKAGE(PNETCDF REQUIRED)
+  FIND_PACKAGE(PnetCDF REQUIRED)
   IF (PNETCDF_FOUND)
     SET(PIDX_HAVE_PNETCDF 1)
   ENDIF()
@@ -120,7 +167,7 @@ ENDIF()
 MESSAGE("PIDX_OPTION_NETCDF ${PIDX_OPTION_NETCDF}")
 OPTION(PIDX_OPTION_NETCDF "Test parallel netcdf-4" FALSE)
 IF (PIDX_OPTION_NETCDF)
-  FIND_PACKAGE(NETCDF REQUIRED)
+  FIND_PACKAGE(NetCDF REQUIRED)
   IF (NETCDF_FOUND)
     SET(PIDX_HAVE_NETCDF 1)
   ENDIF()
