--- a/tutorial/CMakeLists.txt
+++ b/tutorial/CMakeLists.txt
@@ -82,6 +82,10 @@ IF (PIDX_BUILD_TUTORIAL)
   SET(TEMPLATE_CONVERTER_SOURCES 3_PIDX_Utility_Converters/template_converter.c)
   PIDX_ADD_EXECUTABLE(template_converter "${TEMPLATE_CONVERTER_SOURCES}")
   TARGET_LINK_LIBRARIES(template_converter ${TUTORIAL_LINK_LIBS})
+  IF (PIDX_OPTION_NETCDF AND NETCDF_FOUND)
+    INCLUDE_DIRECTORIES(${NETCDF_INCLUDE_DIR})
+    TARGET_LINK_LIBRARIES(template_converter ${NETCDF_LIBRARIES})
+  ENDIF()
   IF (PIDX_OPTION_HDF5 AND HDF5_FOUND)
     INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIR})
     TARGET_LINK_LIBRARIES(template_converter ${HDF5_LIBRARIES})
@@ -90,13 +94,10 @@ IF (PIDX_BUILD_TUTORIAL)
     INCLUDE_DIRECTORIES(${PNETCDF_INCLUDE_DIR})
     TARGET_LINK_LIBRARIES(template_converter ${PNETCDF_LIBRARIES})
   ENDIF()
-  IF (PIDX_OPTION_NETCDF AND NETCDF_FOUND)
-    INCLUDE_DIRECTORIES(${NETCDF_INCLUDE_DIR})
-    TARGET_LINK_LIBRARIES(template_converter ${NETCDF_LIBRARIES})
-  ENDIF()
   IF (PIDX_OPTION_NVISUSIO AND NVISUSIO_FOUND)
     INCLUDE_DIRECTORIES(${NVISUSIO_INCLUDE_DIRS})
     TARGET_LINK_LIBRARIES(template_converter ${NVISUSIO_LIBRARIES})
+    SET_TARGET_PROPERTIES(template_converter PROPERTIES COMPILE_FLAGS ${NVISUSIO_C_FLAGS} LINK_FLAGS ${NVISUSIO_C_FLAGS})
   ENDIF()
 
   # NETCDF_TO_IDX
@@ -110,6 +111,7 @@ IF (PIDX_BUILD_TUTORIAL)
   # IF (PIDX_OPTION_NVISUSIO AND NVISUSIO_FOUND)
   #   INCLUDE_DIRECTORIES(${NVISUSIO_INCLUDE_DIR})
   #   TARGET_LINK_LIBRARIES(netcdf_to_idx ${NVISUSIO_LIBRARIES})
+  #   SET_TARGET_PROPERTIES(netcdf_to_idx PROPERTIES COMPILE_FLAGS ${NVISUSIO_C_FLAGS} LINK_FLAGS ${NVISUSIO_C_FLAGS})
   # ENDIF()
 
   # NETCDF_TO_IDX_CPP
@@ -120,9 +122,18 @@ IF (PIDX_BUILD_TUTORIAL)
     INCLUDE_DIRECTORIES(${NETCDF_INCLUDE_DIR})
     TARGET_LINK_LIBRARIES(netcdf_to_idx_cpp ${NETCDF_LIBRARIES})
   ENDIF()
+  IF (PIDX_OPTION_HDF5 AND HDF5_FOUND)
+    INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIR})
+    TARGET_LINK_LIBRARIES(netcdf_to_idx_cpp ${HDF5_LIBRARIES})
+  ENDIF()
+  IF (PIDX_OPTION_PNETCDF AND PNETCDF_FOUND)
+    INCLUDE_DIRECTORIES(${PNETCDF_INCLUDE_DIR})
+    TARGET_LINK_LIBRARIES(netcdf_to_idx_cpp ${PNETCDF_LIBRARIES})
+  ENDIF()
   IF (PIDX_OPTION_NVISUSIO AND NVISUSIO_FOUND)
     INCLUDE_DIRECTORIES(${NVISUSIO_INCLUDE_DIR})
     TARGET_LINK_LIBRARIES(netcdf_to_idx_cpp ${NVISUSIO_LIBRARIES})
+    SET_TARGET_PROPERTIES(netcdf_to_idx_cpp PROPERTIES COMPILE_FLAGS ${NVISUSIO_C_FLAGS} LINK_FLAGS ${NVISUSIO_C_FLAGS})
   ENDIF()
 
 ENDIF()
